<resources>
    <string name="stove_app_name">灶具</string>
    <string name="stove_back">返回</string>
    <string name="stove_left_stove">左灶</string>
    <string name="stove_right_stove">右灶</string>
    <string name="stove_open_left_hint">请在左灶点火\n为确保安全,不能远程开火</string>
    <string name="stove_open_right_hint">请在右灶点火\n为确保安全,不能远程开火</string>
    <string name="stove_select_stove_hint">请选择炉头，并将锅具放置于对应炉头</string>
    <string name="stove_close_fire_use">关火后可以使用</string>
    <string name="stove_stove_leisure">空闲</string>
    <string name="stove_stove_using">占用</string>
    <string name="stove_stop_cook_hint">确认结束当前烹饪</string>
    <string name="stove_cancel">取消</string>
    <string name="stove_stop_cook">结束烹饪</string>
    <string name="stove_delete">删除</string>
    <string name="stove_select_all">全选</string>
    <string name="stove_pause_cook">暂停烹饪</string>
    <string name="stove_continue_cook">继续烹饪</string>
    <string name="stove_stop_creation_hint">确认结束当前烹饪</string>
    <string name="stove_back_home">返回主页</string>
    <string name="stove_save_surve">保存曲线</string>
    <string name="stove_curve_name_hint">给曲线起个名字吧</string>
    <string name="stove_save_success">保存成功</string>
    <string name="stove_input_empty">输入不能为空</string>
    <string name="stove_input_curve_name_hint">请输入曲线名称</string>
    <string name="stove_ok">确认</string>
    <string name="stove_ok_stop">结束</string>
    <string name="stove_share_hint">请打开ROKI APP, 扫一扫分享</string>
    <string name="stove_lock">长按2s解锁</string>
    <string name="stove_start_working">开始烹饪</string>
    <string name="stove_time">定时</string>
    <string name="stove_qrcode">二维码</string>
    <string name="stove_material">食材</string>
    <string name="stove_step">步骤</string>
    <string name="stove_recipe_step_des">%s.%s</string>
    <string name="stove_delete_ok">确认删除</string>
    <string name="stove_no_recipe">没有相关菜谱</string>
    <string name="stove_cur_step">当前步骤%s/%s</string>
    <string name="stove_step2">步骤%s/%s</string>
    <string name="stove_switch_step">双击切换步骤</string>
    <string name="stove_affirm_lock_hint">确认进入锁定状态\n仅可关火操作</string>
    <string name="stove_complete">完成</string>
    <string name="stove_cook_complete_hint">烹饪结束，快来享受美食</string>
    <string name="stove_go_connect">去连网</string>
    <string name="stove_not_connect">网络未连接</string>
    <string name="stove_connect_failed">网络连接失败</string>
    <string name="stove_home">主页</string>
    <string name="stove_screen_lock">童锁</string>
    <string name="stove_unlock_hint">请长按2s童锁解除锁定</string>
    <string name="stove_no_curve_data">没有曲线数据</string>
    <string name="stove_need_match_pan">需匹配智能锅进行烹饪</string>
    <string name="stove_need_match_stove">需匹配智能灶具进行烹饪</string>
    <string name="stove_go_match">去匹配</string>
    <string name="stove_pan_offline">智能锅已离线</string>
    <string name="stove_stove_offline">智能灶已离线</string>
    <string name="stove_offline">智能灶已离线</string>
    <string name="stove_pan_working">智能锅工作中</string>
    <string name="stove_maintain_phone">维修电话：658889789</string>
    <string name="stove_warning_e1_title">报警信息</string>
    <string name="stove_warning_e1_content">点火失败</string>
    <string name="stove_warning_e2_content">意外熄火</string>
    <string name="stove_warning_e3_content">电磁阀异常</string>
    <string name="stove_warning_e4_content">霍尔电路异常</string>
    <string name="stove_warning_e5_content">热电偶异常</string>
    <string name="stove_warning_e6_content">传感器异常</string>
    <string name="stove_warning_e7_content">防干烧</string>
    <string name="stove_warning_e8_content">通讯异常</string>
    <string name="stove_warning_e9_content">点火板通讯异常</string>
    <string name="stove_warning_e10_content">明火自动翻炒锅掉线</string>
    <string name="stove_step_hint">根据当前菜谱步骤自动调节</string>
</resources>