<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stove_ic_bg"
    tools:context=".ui.activity.CurveSaveActivity">

    <include
        android:id="@+id/ll_title"
        layout="@layout/stove_view_layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_huoli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_52"
        android:textSize="@dimen/sp_24"
        android:textColor="@color/stove_white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_temp"
        app:layout_constraintTop_toBottomOf="@id/ll_title"
        app:layout_constraintHorizontal_chainStyle="spread"/>
    <TextView
        android:id="@+id/tv_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_24"
        android:textColor="@color/stove_white"
        app:layout_constraintLeft_toRightOf="@id/tv_huoli"
        app:layout_constraintRight_toLeftOf="@id/tv_time"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_huoli"/>
    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_24"
        android:textColor="@color/stove_white"
        app:layout_constraintLeft_toRightOf="@id/tv_temp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_temp"
        app:layout_constraintRight_toRightOf="@id/pan_guideline6"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginBottom="@dimen/dp_60"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/pan_guideline6"
        app:layout_constraintTop_toBottomOf="@id/tv_huoli"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/tv_curve_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_110"
        android:layout_marginLeft="@dimen/dp_100"
        android:layout_marginRight="@dimen/dp_24"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="@dimen/sp_48"
        android:textColor="@color/stove_white"
        android:text="@string/stove_curve_name_hint"
        app:layout_constraintLeft_toLeftOf="@id/pan_guideline6"
        app:layout_constraintRight_toLeftOf="@id/iv_edit_name"
        app:layout_constraintTop_toBottomOf="@id/ll_title"/>
    <ImageView
        android:id="@+id/iv_edit_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="@dimen/dp_100"
        android:src="@drawable/stove_edit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_curve_name"
        app:layout_constraintBottom_toBottomOf="@id/tv_curve_name"
        app:layout_constraintDimensionRatio="1:1"/>

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="@dimen/dp_175"
        android:layout_height="@dimen/dp_56"
        android:layout_marginRight="@dimen/dp_64"
        android:layout_marginTop="@dimen/dp_94"
        android:textSize="@dimen/sp_30"
        android:textColor="@color/stove_white"
        android:gravity="center"
        android:text="@string/stove_back_home"
        android:background="@drawable/stove_shape_button_bg_cancel"
        app:layout_constraintLeft_toLeftOf="@id/pan_guideline6"
        app:layout_constraintRight_toLeftOf="@id/tv_save"
        app:layout_constraintTop_toBottomOf="@id/tv_curve_name"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <TextView
        android:id="@+id/tv_save"
        android:layout_width="@dimen/dp_175"
        android:layout_height="@dimen/dp_56"
        android:textSize="@dimen/sp_30"
        android:textColor="@color/stove_white"
        android:gravity="center"
        android:text="@string/stove_save_surve"
        android:background="@drawable/stove_shape_button_bg_ok"
        app:layout_constraintLeft_toRightOf="@id/tv_back"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_back"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/pan_guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>